--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.red5pro</groupId>
     <artifactId>red5pro-ice</artifactId>
@@ -21,11 +21,12 @@
         <maven.compiler.target>1.11</maven.compiler.target>
         <java.release.level>11</java.release.level>
         <mina.version>2.0.23</mina.version>
+        <red5pro-common.version>11.0.1.5</red5pro-common.version>
         <jmdns.version>3.5.8</jmdns.version>
         <logback.version>1.2.3</logback.version>
         <junit.version>[4.13.1,)</junit.version>
     </properties>
-<!--
+    <!--
 red5pro-ext-snapshot
 https://red5pro.jfrog.io/red5pro/ext-snapshot-local
 -->
@@ -40,6 +41,11 @@ https://red5pro.jfrog.io/red5pro/ext-snapshot-local
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>com.red5pro</groupId>
+            <artifactId>red5pro-common</artifactId>
+            <version>${red5pro-common.version}</version>
+        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -70,8 +76,8 @@ https://red5pro.jfrog.io/red5pro/ext-snapshot-local
         <defaultGoal>clean install</defaultGoal>
         <plugins>
             <plugin>
-	            <artifactId>maven-compiler-plugin</artifactId>
-	            <version>3.8.1</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <executions>
                     <execution>
                         <id>default-compile</id>
@@ -152,7 +158,7 @@ https://red5pro.jfrog.io/red5pro/ext-snapshot-local
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>4.2.1</version>
+                <version>5.1.1</version>
                 <extensions>true</extensions>
             </plugin>
         </plugins>
