--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.red5pro</groupId>
     <artifactId>red5pro-ice</artifactId>
     <!-- When the version changes, update Agent.VERSION as well -->
-    <version>1.1.0</version>
+    <version>1.1.1</version>
     <packaging>jar</packaging>
     <name>red5pro-ice</name>
     <url>https://github.com/red5pro/red5pro-ice</url>
@@ -33,7 +33,6 @@
         <maven.build.timestamp.format>MM.dd.yyyy HH:mm</maven.build.timestamp.format>
         <timestamp>${maven.build.timestamp}</timestamp>
         <mina.version>2.0.23</mina.version>
-        <red5pro-common.version>12.6.0.62</red5pro-common.version>
         <jmdns.version>3.5.8</jmdns.version>
         <logback.version>1.5.6</logback.version>
         <junit.version>[4.13.1,)</junit.version>
@@ -62,11 +61,6 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>com.red5pro</groupId>
-            <artifactId>red5pro-common</artifactId>
-            <version>${red5pro-common.version}</version>
-        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -127,21 +121,15 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <show>private</show>
-                    <nohelp>true</nohelp>
+                    <verbose>false</verbose>
                     <failOnError>false</failOnError>
                     <sourcepath>${basedir}/src/main/java</sourcepath>
                     <includeDependencySources>false</includeDependencySources>
+                    <dependencySourceIncludes>
+                        <dependencySourceInclude>com.red5pro:*</dependencySourceInclude>
+                    </dependencySourceIncludes>
                     <detectOfflineLinks>false</detectOfflineLinks>
                     <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
-                    <tags>
-                        <tag>
-                            <name>todo</name>
-                            <!-- todo tag for all places -->
-                            <placement>a</placement>
-                            <head>To do:</head>
-                        </tag>
-                    </tags>
                 </configuration>
             </plugin>
             <plugin>
